Fix spacing on editorial feature_block [WEB-2834]

--- a/frontend/scss/molecules/_m-feature-block.scss
+++ b/frontend/scss/molecules/_m-feature-block.scss
@@ -423,7 +423,11 @@
             border-top: none;
 
             .m-feature-block-row {
+                @include breakpoint('small+') {
+                    margin-right: -40px;
+                }
                 margin-right: -20px;
+                margin-bottom: 56px;
             }
 
             .m-feature-block-listing.column-4x {
@@ -436,6 +440,11 @@
 
             .m-feature-block-listing {
                 border-top: none !important;
+
+                .m-feature-block-listing__meta {
+                    min-height: fit-content;
+                    padding-bottom: 20px;
+                }
 
                 &::after {
                     display: none;
